--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/azhar.jpg" alt="">
-            <h4>Adiba RK Yesmin</h4>
+            <h4>Mr.XY</h4>
             <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
@@ -277,7 +277,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/man.png" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/Man.png" alt="">
             <h4>Mr. x</h4>
             <p class="text-muted">Lead Designer</p>
             <ul class="list-inline social-buttons">
