--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/female.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/female.png" alt="">
             <h4>Mrs. Y</h4>
             <p class="text-muted">Lead Designer</p>
             <ul class="list-inline social-buttons">
